[package]
name = "jellyfin"
version = "0.1.4"
edition = "2021"
license = "MIT"
keywords = ["media", "jellyfin", "streaming"]
categories = ["api-bindings"]
description = "Bindings to the jellyfin web API"
homepage = "https://github.com/sargon64/jellyfin-rs"
repository = "https://github.com/sargon64/jellyfin-rs"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tracing"]
debug = []
rustls-ring = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
sha2-openssl = ["dep:openssl"]
sha2-ring = ["dep:ring"]
sha2-aws-lc-rs = ["dep:aws-lc-rs"]
tracing = ["dep:reqwest-middleware", "dep:reqwest-tracing"]

[dependencies]
aws-lc-rs = { version = "1.12.0", optional = true }
base64 = "0.22.1"
openssl = { version = "0.10.68", optional = true }
reqwest = { version = "0.12.0", features = ["http2", "json"], default-features = false }
reqwest-middleware = { version = "0.4.0", optional = true, features = ["json"] }
reqwest-tracing = { version = "0.5.5", optional = true }
ring = { version = "0.17.8", optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
url = "2.4.0"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros"] }
